[gd_scene load_steps=17 format=3 uid="uid://csjcseh76ann"]

[ext_resource type="Script" uid="uid://bwgcsja3nfwur" path="res://protag/phone/phone_base.gd" id="1_27mfi"]
[ext_resource type="Script" uid="uid://1tync2pe52c" path="res://protag/phone/Flashlight.gd" id="2_0mhho"]
[ext_resource type="AudioStream" uid="uid://d3s448a0plbr6" path="res://protag/phone/Flashlight Sound Effect sfx.mp3" id="3_qcfi2"]
[ext_resource type="Script" uid="uid://uxhwtw25fcb" path="res://protag/phone/FlashlightAudioPlayer.gd" id="4_sx8jk"]
[ext_resource type="AudioStream" uid="uid://tnc0mjj5m1i3" path="res://protag/phone/soft_beep.mp3" id="5_sx8jk"]
[ext_resource type="Script" uid="uid://cnf2d8tjli50t" path="res://protag/phone/PhoneCameraUpdate.gd" id="6_887j7"]
[ext_resource type="Script" path="res://protag/phone/PhoneAudioPlayer.gd" id="6_q526q"]
[ext_resource type="ArrayMesh" uid="uid://1xrvufpoku40" path="res://protag/phone/hand_phone.obj" id="7_0mhho"]
[ext_resource type="Script" uid="uid://pium7ki06sws" path="res://protag/phone/SnapshotCamera.gd" id="9_q526q"]
[ext_resource type="PackedScene" uid="uid://dntudjvbxrfga" path="res://levels/DiagnosticsApp.tscn" id="10_q526q"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sx8jk"]

[sub_resource type="Animation" id="Animation_t2tbu"]
resource_name = "HidePhone"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PhoneNode:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.566667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.1, -0.05, -0.15), Vector3(0.1, -0.3, -0.15)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PhoneNode:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.566667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.523599, 0, -1.22173), Vector3(-0.785398, 0, -1.5708)]
}

[sub_resource type="Animation" id="Animation_i3rst"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PhoneNode:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.440142, -0.375938, -0.56255)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PhoneNode:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_dfbam"]
resource_name = "ShowPhone"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PhoneNode:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.1, -0.5, -0.15), Vector3(0.1, -0.05, -0.15)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PhoneNode:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.333333, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, -1.5708), Vector3(0, 0, -1.48353), Vector3(0, 0, -1.39626)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PhoneNode/PhoneAnimationPlayer/PhoneAudio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_play_ON_sound"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eq54l"]
_data = {
&"HidePhone": SubResource("Animation_t2tbu"),
&"RESET": SubResource("Animation_i3rst"),
&"ShowPhone": SubResource("Animation_dfbam")
}

[sub_resource type="ViewportTexture" id="ViewportTexture_sx8jk"]
viewport_path = NodePath("SubViewport")

[node name="PhoneNode" type="Node3D"]
script = ExtResource("1_27mfi")

[node name="HandPhone" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.0114897, -0.170845, -0.0342158)
mesh = ExtResource("7_0mhho")
surface_material_override/0 = SubResource("StandardMaterial3D_sx8jk")

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.02)
light_energy = 0.0
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.3
shadow_enabled = true
distance_fade_enabled = true
spot_range = 6.0
script = ExtResource("2_0mhho")

[node name="FlashlightClick" type="AudioStreamPlayer3D" parent="SpotLight3D"]
stream = ExtResource("3_qcfi2")
volume_db = -30.27
script = ExtResource("4_sx8jk")

[node name="PhoneAnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_eq54l")
}

[node name="PhoneAudio" type="AudioStreamPlayer3D" parent="PhoneAnimationPlayer"]
stream = ExtResource("5_sx8jk")
volume_db = -15.0
script = ExtResource("6_q526q")

[node name="PhoneScreen" type="Sprite3D" parent="."]
transform = Transform3D(-6.55671e-10, -0.015, 0, 0.015, -6.55671e-10, 0, 0, 0, 0.015, -0.0035342, 0, -0.0112827)
double_sided = false
texture = SubResource("ViewportTexture_sx8jk")
region_enabled = true
region_rect = Rect2(0, 0, 350, 597)

[node name="SubViewport" type="SubViewport" parent="." groups=["CameraViewport"]]
handle_input_locally = false
gui_disable_input = true
size = Vector2i(350, 597)
render_target_clear_mode = 1
render_target_update_mode = 4

[node name="PhoneCamera" type="Camera3D" parent="SubViewport"]
physics_interpolation_mode = 1
cull_mask = 1047555
fov = 50.0
script = ExtResource("6_887j7")

[node name="SnapViewport" type="SubViewport" parent="." groups=["CameraViewport"]]
handle_input_locally = false
gui_disable_input = true
size = Vector2i(350, 597)
render_target_clear_mode = 1
render_target_update_mode = 4

[node name="SnapshotCamera" type="Camera3D" parent="SnapViewport"]
physics_interpolation_mode = 1
cull_mask = 1047619
fov = 50.0
script = ExtResource("9_q526q")

[node name="DiagnosticsApp" parent="." instance=ExtResource("10_q526q")]
position = Vector2(-362, 60)
